coded the html page

--- a/index.html
+++ b/index.html
@@ -3,16 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Psychic Game</title>
+
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
-    <script src="assets/javascript/game.js"></script>
+
+    <header>
+        <div class="header">
+            <h1>The Psychic Game</h1>
+        </div>
+    </header>
+
+    <div class="container">
+        <h3>Guess what letter I'm thinking of</h3>
+        <br>
+        <h3 id="wins">Wins:</h3>
+        <br>
+        <h3 id="losses">Losses:</h3>
+        <br>
+        <h3 id="guesses left">Guesses Left:</h3>
+        <br>
+        <h3 id="guesses so far">Your Guesses so far:</h3>
+        <br>
+    </div>
+
+    <div class="footer">
+        &copy; Copyright Nicole Roberts
+    </div>
+
+    <script src="assets/javascript/game.js">
+
+    </script>
 </body>
 
 </html>
