finished the javascript file and linke it to the html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div class="container">
         <h3>Guess what letter I'm thinking of</h3>
         <br>
-        <h3 id="wins">Wins:</h3>
+        <h3>Wins: <span id="wins-text"></span></h3>
         <br>
-        <h3 id="losses">Losses:</h3>
+        <h3>Losses:<span id="losses-text"></span></h3>
         <br>
-        <h3 id="guesses left">Guesses Left:</h3>
+        <h3>Guesses Left: <span id="guessesLeft-text"></span></h3>
         <br>
-        <h3 id="guesses so far">Your Guesses so far:</h3>
+        <h3>Guesses So Far: <span id="guessesSoFar-text"></span></h3>
         <br>
     </div>
 
