added basic styling to the css file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="container">
-        <h3>Guess what letter I'm thinking of</h3>
+        <h2>Guess what letter I'm thinking of</h2>
         <br>
         <h3>Wins: <span id="wins-text"></span></h3>
         <br>
@@ -32,9 +32,9 @@
         <br>
     </div>
 
-    <div class="footer">
-        &copy; Copyright Nicole Roberts
-    </div>
+    <footer>
+        &copy; Copyright
+    </footer>
 
     <script src="assets/javascript/game.js">
 
