--- a/index.html
+++ b/index.html
@@ -14,21 +14,35 @@
 <body>
 
     <header>
-        <div class="header">
-            <h1>The Psychic Game</h1>
+        <div class="page-header">
+            <h1>THE PSYCHIC GAME</h1>
         </div>
     </header>
 
     <div class="container">
+        <br>
+        <br>
+        <br>
         <h2>Guess what letter I'm thinking of</h2>
-        <br>
-        <h3>Wins: <span id="wins-text"></span></h3>
-        <br>
-        <h3>Losses:<span id="losses-text"></span></h3>
-        <br>
-        <h3>Guesses Left: <span id="guessesLeft-text"></span></h3>
-        <br>
-        <h3>Guesses So Far: <span id="guessesSoFar-text"></span></h3>
+
+        <div class="row">
+
+            <div class="col-md-4"></div>
+
+            <div class="col-md-4" id="stats">
+
+                <p>Wins: <span id="wins-text"></span></p>
+
+                <p>Losses:<span id="losses-text"></span></p>
+                <p>Guesses Left: <span id="guessesLeft-text"></span></p>
+
+                <p>Guesses So Far: <span id="guessesSoFar-text"></span></p>
+
+            </div>
+
+            <div class="col-md-4"></div>
+
+        </div>
         <br>
     </div>
 
